--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "@nestjs/platform-express": "^7.6.15",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
-  },
-  "devDependencies": {
+    "rxjs": "^6.6.6",
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
@@ -49,7 +47,7 @@
     "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3"	
   },
   "jest": {
     "moduleFileExtensions": [
