--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "esm": "^3.2.25",
+    "flatted": "^3.2.2",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "reflect-metadata": "^0.1.13",
