--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "esm": "^3.2.25",
     "flatted": "^3.2.2",
     "jest": "^26.6.3",
+    "platform-folders": "^0.5.4",
     "prettier": "^2.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
