--- a/package.json
+++ b/package.json
@@ -22,36 +22,39 @@
   },
   "dependencies": {
     "@data-story-org/core": "https://github.com/data-story-org/core",
-    "@babel/preset-env": "^7.15.4",
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/common": "^8.0.6",
+    "@nestjs/core": "^8.0.6",
     "@nestjs/platform-fastify": "^8.0.6",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/schedule": "^1.0.1",
+    "@nestjs/schematics": "^8.0.3",
+    "@nestjs/testing": "^8.0.6",
+    "axios": "^0.21.4",
+    "esm": "^3.2.25",
+    "flatted": "^3.2.2",
+    "platform-folders": "^0.5.4",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.3.0"
+  },
+  "devDependencies": {
+    "@nestjs/cli": "^8.1.1",
+    "supertest": "^6.1.3",
     "@types/jest": "^26.0.22",
     "@types/node": "^16.9.0",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
-    "axios": "^0.21.4",
+    "@types/cron": "^1.7.3",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "esm": "^3.2.25",
-    "flatted": "^3.2.2",
     "jest": "^26.6.3",
-    "platform-folders": "^0.5.4",
-    "prettier": "^2.2.1",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
-    "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "prettier": "^2.2.1"
   },
   "jest": {
     "moduleFileExtensions": [
